[gd_scene load_steps=27 format=3 uid="uid://b05krlr2l2rrs"]

[ext_resource type="Script" path="res://snail.gd" id="1_i3h4y"]
[ext_resource type="Texture2D" uid="uid://b6xwa4e1rx1ik" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Snail/walk-Sheet.png" id="1_yiji0"]
[ext_resource type="Texture2D" uid="uid://b74c6ms343gaf" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Snail/Hide-Sheet.png" id="2_b1ymq"]
[ext_resource type="Texture2D" uid="uid://y24aaa4jwdwl" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Snail/Dead-Sheet.png" id="3_23cnu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbtpe"]
size = Vector2(34, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rmqm"]
size = Vector2(38, 25)

[sub_resource type="Animation" id="Animation_dg0eo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yiji0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v81ge"]
resource_name = "death"
length = 0.75
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_23cnu")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_hk1lt"]
resource_name = "hide"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b1ymq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_2mqnb"]
resource_name = "idle"
length = 0.125
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yiji0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_eflaq"]
resource_name = "unhide"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b1ymq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_7pnpn"]
resource_name = "walk"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yiji0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0gwt"]
_data = {
"RESET": SubResource("Animation_dg0eo"),
"death": SubResource("Animation_v81ge"),
"hide": SubResource("Animation_hk1lt"),
"idle": SubResource("Animation_2mqnb"),
"unhide": SubResource("Animation_eflaq"),
"walk": SubResource("Animation_7pnpn")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2lj1b"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ajr0g"]
animation = &"hide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p5h73"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ya5tf"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_pimq4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_p5h73")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ya5tf")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8qrqh"]
animation = &"unhide"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wkxgf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0tduj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rhdd2"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k7p6m"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q1b5d"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gqlvd"]
states/Start/position = Vector2(201, 100)
states/death/node = SubResource("AnimationNodeAnimation_2lj1b")
states/death/position = Vector2(557.196, 100)
states/hide/node = SubResource("AnimationNodeAnimation_ajr0g")
states/hide/position = Vector2(356, 184)
states/move/node = SubResource("AnimationNodeBlendSpace1D_pimq4")
states/move/position = Vector2(356, 100)
states/unhide/node = SubResource("AnimationNodeAnimation_8qrqh")
states/unhide/position = Vector2(515.196, 184)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_wkxgf"), "move", "hide", SubResource("AnimationNodeStateMachineTransition_0tduj"), "hide", "unhide", SubResource("AnimationNodeStateMachineTransition_rhdd2"), "unhide", "move", SubResource("AnimationNodeStateMachineTransition_k7p6m"), "move", "death", SubResource("AnimationNodeStateMachineTransition_q1b5d")]
graph_offset = Vector2(-278.804, 68.027)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pktai"]
size = Vector2(133, 5)

[node name="Snail" type="CharacterBody2D"]
script = ExtResource("1_i3h4y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yiji0")
hframes = 8

[node name="SnailShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_gbtpe")

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_5rmqm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0gwt")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_gqlvd")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = 1.0

[node name="RayCastWall" type="RayCast2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
target_position = Vector2(1.18021e-06, 27)

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 22)

[node name="TimeSlice" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="BehaviorTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="LineOfSightArea" type="Area2D" parent="."]

[node name="LineOfSightBox" type="CollisionShape2D" parent="LineOfSightArea"]
position = Vector2(-86.5, -5)
shape = SubResource("RectangleShape2D_pktai")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="TimeSlice" to="." method="_on_time_slice_timeout"]
[connection signal="timeout" from="BehaviorTimer" to="." method="_on_behavior_timer_timeout"]
[connection signal="body_entered" from="LineOfSightArea" to="." method="_on_line_of_sight_area_body_entered"]
